--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand navbar-dark bg-primary mb-3">
   <div class="container">
     <a href="{{ '/' | url }}" class="navbar-brand">
-      <img src="/images/logo_stargazers_bug.svg" alt="Stargazer Logo" style="max-width:35px;"/> Stargazer
+      <img src="{{'/images/logo_stargazers_bug.svg' | url}}" alt="Stargazer Logo" style="max-width:35px;"/> Stargazer
     </a>
 
     <ul class="navbar-nav">
