--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -9,10 +9,10 @@
         <a href="{{ '/' | url }}" class="nav-link">Home</a>
       </li>
       <li class="nav-item">
-        <a href="{{ '/cast' | url }}" class="nav-link">Cast</a>
+        <a href="{{ '/cast/' | url }}" class="nav-link">Cast</a>
       </li>
       <li class="nav-item">
-        <a href="{{ '/collectibles' | url }}" class="nav-link">Collectibles</a>
+        <a href="{{ '/collectibles/' | url }}" class="nav-link">Collectibles</a>
       </li>
     </ul>
   </div>
